monitoring/resources/grafana/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ui-https
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - monitoring.govirto.com
    secretName: grafana-tls
  rules:
  - host: monitoring.govirto.com
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
